--- a/ezDates/web/usuarios_trending.html
+++ b/ezDates/web/usuarios_trending.html
@@ -29,12 +29,14 @@
         </script>
     </div>
 
-    <div class="container-content">
-        <h2>Usuarios Trending</h2>
-        <main>
-            <div id="usuarios_trending"></div>
-        </main>
-        
+    <div class="container-body">
+        <div class="container-content">
+            <h2>Usuarios Trending</h2>
+            <main>
+                <div id="usuarios_trending"></div>
+            </main>
+            
+        </div>
     </div>
 
     <footer>
