--- a/ezDates/web/usuarios_trending.html
+++ b/ezDates/web/usuarios_trending.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/fotos_trending.css">
+    <link rel="stylesheet" href="css/users.css">
     <script src="/js/utils/include.js"></script>
     <script type="module" src="/js/usuarios_trending.js"></script>
     <title>Ez-Dates: Tu App de citas</title>
