--- a/ezDates/web/header.html
+++ b/ezDates/web/header.html
@@ -30,6 +30,7 @@
             <div class="container-fluid">
 
                 <div class="navbar-collapse left">
+                    <a class="index nav-link" href="index.html"> INICIO</a>
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             <a class="nav-link" href="fotos_trending.html">Fotos Trending</a>
@@ -45,7 +46,7 @@
                 <div class="navbar-collapse-right">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="register.html">Register</a>
+                            <a class="nav-link" href="register.html">Registro</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="login.html">Login</a>
