--- a/ezDates/web/profile_detail.html
+++ b/ezDates/web/profile_detail.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/fotos.css">
+    <link rel="stylesheet" href="css/profile_details.css">
     <script src="/js/utils/include.js"></script>
-    <script type="module" src="/js/fotos_trending.js"></script>
+    <script type="module" src="/js/profile_details.js"></script>
     <title>Ez-Dates: Tu App de citas</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,10 +29,12 @@
         </script>
     </div>
     <div class="container-body">
-        <div class="container-content">
-            <h2 class="titulo">Fotos Trending</h2>
+        <main>
+            <div id="perfil"></div>
+        </main>
+        <div class="container-fotos">
             <main>
-                <div id="fotos_trending"></div>
+                <div id="perfil_fotos"></div>
             </main>
             
         </div>
