--- a/ezDates/web/register.html
+++ b/ezDates/web/register.html
@@ -45,17 +45,18 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="firstname-input">Nombre completo:</label>
+                                <label for="firstname">Nombre completo:</label>
                                 <input type="text" class="form-control text-light bg-dark" id="nombre"
-                                    name="nombre" placeholder="First name">
+                                    name="nombre" placeholder="Introduce tu nombre completo">
                             </div>
                         </div>
                     </div>
 
+
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="email-input">Email:</label>
+                                <label for="email">Email:</label>
                                 <input type="text" class="form-control text-light bg-dark" id="email" name="email"
                                     placeholder="Email">
                             </div>
@@ -63,7 +64,7 @@
 
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="phone-input">Phone:</label>
+                                <label for="phone">Phone:</label>
                                 <input type="tel" class="form-control text-light bg-dark" id="telefono" name="telefono"
                                     placeholder="Phone">
                             </div>
@@ -84,7 +85,7 @@
 
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="birthdate-input">Fecha de nacimiento:</label>
+                                <label for="fechaNacimiento">Fecha de nacimiento:</label>
                                 <input type="date" class="form-control text-light bg-dark" id="fechaNacimiento"
                                     name="fechaNacimiento">
                             </div>
@@ -95,24 +96,24 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="username-input">Username:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="username-input"
+                                <label for="username">Username:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="username"
                                     name="username" placeholder="Username">
                             </div>
                         </div>
 
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="password-input">Password:</label>
-                                <input type="password" class="form-control text-light bg-dark" id="password-input"
+                                <label for="password">Password:</label>
+                                <input type="password" class="form-control text-light bg-dark" id="password"
                                     name="password" placeholder="Password">
                             </div>
                         </div>
 
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="password-input">Repeat Password:</label>
-                                <input type="password" class="form-control text-light bg-dark" id="password2-input"
+                                <label for="password">Repeat Password:</label>
+                                <input type="password" class="form-control text-light bg-dark" id="password2"
                                     name="password2" placeholder="Repeat Password">
                             </div>
                         </div>
@@ -122,15 +123,15 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="foto-input">Foto de perfil:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="foto-input" name="foto"
+                                <label for="foto">Foto de perfil:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="foto" name="foto"
                                     placeholder="Indique la url de la foto">
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="ciudad-input">Ciudad:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="ciudad-input"
+                                <label for="ciudad">Ciudad:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="ciudad"
                                     name="ciudad" list="ciudades-list" placeholder="Indique la ciudad de España">
                                 <datalist id="ciudades-list">
                                     <option value="A Coruña"></option>
@@ -199,15 +200,15 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="peso-input">Peso:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="peso-input" name="peso"
+                                <label for="peso">Peso:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="peso" name="peso"
                                     placeholder="Indique su peso en kgs">
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="estatura-input">Estatura:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="estatura-input"
+                                <label for="estatura">Estatura:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="estatura"
                                     name="estatura" placeholder="Indique su estatura en cms">
                             </div>
                         </div>
@@ -219,8 +220,8 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="color-pelo-input">Color de pelo:</label>
-                                <select class="form-control text-light bg-dark" id="color-pelo-input" name="color-pelo">
+                                <label for="color-pelo">Color de pelo:</label>
+                                <select class="form-control text-light bg-dark" id="color-pelo" name="color-pelo">
                                     <option value="">Seleccionar color de pelo</option>
                                     <option value="Rubio">Rubio</option>
                                     <option value="Castaño">Castaño</option>
@@ -232,8 +233,8 @@
                         </div>
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="color-ojos-input">Color de ojos:</label>
-                                <select class="form-control text-light bg-dark" id="color-ojos-input" name="color-ojos">
+                                <label for="color-ojos">Color de ojos:</label>
+                                <select class="form-control text-light bg-dark" id="color-ojos" name="color-ojos">
                                     <option value="">Seleccionar color de ojos</option>
                                     <option value="Azul">Azul</option>
                                     <option value="Verde">Verde</option>
@@ -245,8 +246,8 @@
                         </div>
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="aficcion-input">Aficción:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="aficcion-input"
+                                <label for="aficcion">Aficción:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="aficcion"
                                     name="aficcion" list="aficciones-list" placeholder="Indique su aficción">
                                 <datalist id="aficciones-list">
                                     <option value="A Coruña"></option>
@@ -261,7 +262,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md text-center">
-                            <input type="text" id="biografia-input">Biografia</input>
+                            <input type="text" id="biografia" class="biografia">Biografia</input>
                         </div>
 
                     </div>
