--- a/ezDates/web/register.html
+++ b/ezDates/web/register.html
@@ -45,7 +45,7 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="firstname">Nombre completo:</label>
+                                <label for="nombre">Nombre completo:</label>
                                 <input type="text" class="form-control text-light bg-dark" id="nombre"
                                     name="nombre" placeholder="Introduce tu nombre completo">
                             </div>
@@ -64,7 +64,7 @@
 
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="phone">Phone:</label>
+                                <label for="telefono">Phone:</label>
                                 <input type="tel" class="form-control text-light bg-dark" id="telefono" name="telefono"
                                     placeholder="Phone">
                             </div>
@@ -74,7 +74,7 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="gender-select">Género:</label>
+                                <label for="genero">Género:</label>
                                 <select class="form-control text-light bg-dark" id="genero" name="genero">
                                     <option value="male">Male</option>
                                     <option value="female">Female</option>
@@ -96,9 +96,9 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="username">Username:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="username"
-                                    name="username" placeholder="Username">
+                                <label for="usuario">Username:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="usuario"
+                                    name="usuario" placeholder="Usuario">
                             </div>
                         </div>
 
@@ -112,7 +112,7 @@
 
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="password">Repeat Password:</label>
+                                <label for="password2">Repeat Password:</label>
                                 <input type="password" class="form-control text-light bg-dark" id="password2"
                                     name="password2" placeholder="Repeat Password">
                             </div>
@@ -123,16 +123,16 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="foto">Foto de perfil:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="foto" name="foto"
+                                <label for="fotoUrl">Foto de perfil:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="fotoUrl" name="fotoUrl"
                                     placeholder="Indique la url de la foto">
                             </div>
                         </div>
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="ciudad">Ciudad:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="ciudad"
-                                    name="ciudad" list="ciudades-list" placeholder="Indique la ciudad de España">
+                                <label for="provincia">Ciudad:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="provincia"
+                                    name="provincia" list="ciudades-list" placeholder="Indique la ciudad de España">
                                 <datalist id="ciudades-list">
                                     <option value="A Coruña"></option>
                                     <option value="Álava"></option>
