--- a/ezDates/web/login.html
+++ b/ezDates/web/login.html
@@ -17,7 +17,6 @@
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <script src="/web/css/footer.css"></script>
-    <script src="/js/libs/jquery-3.4.1.min.js"></script>
     <script src="/js/libs/bootstrap.min.js"></script>
     <script type="module" src="/js/login.js"></script>
     <script src="js/libs/axios.min.js"></script>
@@ -46,8 +45,8 @@
                     <div class="row">
                         <div class="col-md">
                             <div class="form-group">
-                                <label for="email-input">Email:</label>
-                                <input type="text" class="form-control text-light bg-dark" id="email-input" name="email"
+                                <label for="usuario">Usuario:</label>
+                                <input type="text" class="form-control text-light bg-dark" id="usuario" name="usuario"
                                     placeholder="Email">
                             </div>
                         </div>
